@@ -1,3 +1,8 @@
+2018-11-28  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/79351
+	* gcc.dg/torture/pr79351.c: New testcase.
+
 2018-11-26  Andreas Krebbel  <krebbel@linux.ibm.com>
 
 	Backport from mainline
